--- a/unit_4/css/main.css
+++ b/unit_4/css/main.css
@@ -1,94 +1,78 @@
+* { margin:0; padding:0; box-sizing:border-box; }
+#menu {
+	position: fixed;
+}   
+#menu a {
+	text-decoration: none;
+	color: white;
+	font-size: 1.5em;
+	display: inline-block;
+	margin: 0 1.5em;
+	padding: 1em 1em;
+}
+#menu a:hover {
+	color: #87ADF2;
+}
 #titre h1 {
 	font-family: "Helvetica Neue",sans-serif;
 	color:#FFFFFF;
-	font-size:500%; 
+	font-size: 6em;
 	font-style: normal;
 	text-align: center;
 	text-transform: uppercase;
 	font-weight: 500;
+	padding:2em 0 2em;
 }
 #titre {
+	position: relative;
 	background-color: #EBDA95;
-	padding-top:  100px;
-	padding-bottom: 100px;
-}
-#menu {
-	padding: 100px 0 100px;
-	background-color: #EBDA95;
-}   
-#menu ul {
-    padding: 20px;
-    margin-left: 250px;
-	line-height: 2;
-	text-decoration-style: none;
-	font-family: "Helvetica Neue",sans-serif;
-	font-size:300%;
-	text-transform: uppercase;
-	color: white;
-	list-style-type: none;
-}
-#menu a {
-	text-decoration: none;
-	color: white;
-}
-#menu a:hover {
-	color: #87ADF2;
+	padding-bottom:  1000px;
+	height: 100vh;
 }
 img.photocouple{
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
 	float: none;
-	border: solid 4px #87ADF2;
+	border-radius: 50%;
 }
 #lesmaries {
 	padding: 50px 0 100px;
 	background-color: #EBDA95;
-}
-#data ol {
-	display: block;
-	float: none;
-	text-transform: uppercase;
-	text-align: left;
-	font-family: "Helvetica Neue",sans-serif;
-	font-size:100%;
-	padding-right: 50px;
-	list-style-type: none;
-	text-decoration: none;
-	color: white;
-	line-height: 50px;
-	font-size: 200%;
-}
-#data div {
-	display:none;
-}
-#data a:hover + div {
-	display: inline-block;
-}
-#data div {
-	float: right;
-}
-#data {
-	padding: 100px 0 100px;
-	background-color: #87ADF2;
+	height: 100vh;
 }
 #datedumariage {
-	padding: 100px 0 100px;
+	padding: 10px 0 100px;
 	font-family: "Helvetica Neue",sans-serif;
-	font-size:1	00%;
-	text-transform: uppercase;
-	text-align: center;
 	color: #87ADF2;
+	text-align: center;
+	background-color: white;
+	height: 100vh;
 }
 #datedumariage h1 {
 	font-family: helvetica, sans-serif;
-	font-size: 400%;
+	font-size: 4em;
+	line-height: 3em;
 	text-transform: capitalize;
+}
+#datedumariage h2 {
+	font-size: 2em;
+	line-height: 1.25em;		 		
+	font-style: italic;
+	line-height: 2em;
+}
+#datedumariage p {
+	font-family: helvetica, sans-serif;
+	font-size: 1em;
+	line-height: 0.75em;
+	font-style: italic;
+	line-height: 1em;
 }
 #lieudereception {
 	padding: 100px 0 100px;
 	background-color: #EBDA95;
+	height: 100vh;
 }
 #laregion {
-	padding: 100px 0 100px;
+	height: 100vh;
 }
