--- a/unit_6/css/main.css
+++ b/unit_6/css/main.css
@@ -1,7 +1,7 @@
 * { margin:0; padding:0; box-sizing:border-box; }
 
 body {
-	background-image: url('../images/ciel.JPG');
+	background-image: url('../images/ciel.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
 }
