--- a/unit_8/css/main.css
+++ b/unit_8/css/main.css
@@ -4,15 +4,16 @@ body {
 	background-image: url('../images/ciel.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
+	font-size: 15px;
 }
 #titre{
 	min-height: 100vh;
-    padding: 10px;
+    padding: 1%;
 }
 #menu {
 	position: fixed;
 	display: inline-block;
-	font-size: small;
+	font-size: 0.9em;
 }
 #menu a:hover {
 	color: #87ADF2;
@@ -47,6 +48,9 @@ img.photocouple{
 	color: #EBDA95;
 	text-align: center; 		
 	min-height: 100vh;
+	padding-left: 5%;
+	padding-right: 5%;
+	padding-top: 9%;
 }
 #datedumariage img {
 	display: block;
@@ -60,16 +64,14 @@ img.photocouple{
 	font-size: 4em;
 }
 #datedumariage h2 {
-	font-size: 1.85em;
-	line-height: 1.5em;		 		
+	font-size: 1.85em;	 		
 	font-style: italic;
-	line-height: 2em;
+	line-height: 1.2em;
 }
-#subsection {
+.subsection {
 	width: 32%;
   	padding: .8%;
- 	margin: 0 8px;
-  	float: left;
+ 	float: left;
 }
 .subsection.clear {
 	clear: both;
@@ -82,7 +84,6 @@ img.photocouple{
 	line-height:3em;
 }
 #lieudereception {
-	padding: 5% 0 5px;
 	min-height: 100vh;
 	font-family: helvetica, sans-serif;
 	font-size: 1em;
@@ -91,24 +92,27 @@ img.photocouple{
 }
 #direction {
 	float: left;
-	margin: 0 20px;
-	width: 40%;
+	width: 50%;
+	margin-left: 10%;
+	margin-top: 10%;
+	padding: 1%;
 }
 #lieudereception img{
-  	padding: 1%;
- 	margin: 0 20px;
- 	width: 40%;
+	margin-top: 10%;
+ 	width: 30%;
 }
 #lestemoins {
 	min-height: 100vh;
-	padding: 5% 0 5%;
+	padding-left: 5%;
+	padding-right: 5%;
+	padding-top: 10%;
 	margin: auto; 
 }
 #lestemoins img{
 	border-radius: 50%;
-	width: 80%;
+	width: 70%;
 	display: block;
-	margin: auto;
+	margin: 0 auto;
 }
 #lestemoins h1 {
 	font-family: "Helvetica Neue",sans-serif;
@@ -116,45 +120,51 @@ img.photocouple{
 	font-size: 1.5em;
 	font-style: normal;
 	text-align: center;
-	padding-bottom: 1.7em;
+	padding-bottom: 0.25em;
 }
 #lestemoins h2{
 	font-family: "Helvetica Neue",sans-serif;
 	color:#EBDA95;
-	font-size: 1em;
+	font-size: 1.2em;
 	font-style: normal;
 	text-align: center;
 }
 #temoinsisabelle {
-    padding: 1%;
-    float: left;
-    width: 50%;
-}
-.temoinsisabelle1 {
-    padding: 30px;
     float: left;
     width: 50%;
 }
 #temoinsarnaud {
-    padding: 10px;
     float: left;
     width: 50%;
 }
-.temoinsarnaud1 {
-    padding: 30px;
+.temoinsisabelle1 {
+    padding: 3%;
     float: left;
-    width: 50%;
+    width: 49%;
+}
+.temoinsarnaud1 {
+	padding: 3%;
+    float: left;
+    width: 49%;
  }
 #lescadeaux {
 	min-height: 100vh;
-	padding: 100px 0 100px;
+	padding: 10% 0 10%
 }
 #lescadeaux img{
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 5em;
+	margin-top: 2em;
 	height: 60vh;
+	width: 90%
+}
+#lescadeaux h1 {
+	font-family: "Helvetica Neue",sans-serif;
+	color:#EBDA95;
+	font-size: 2em;
+	font-style: normal;
+	text-align: center;
 }
 .clearfix:after {
 	display:block;
@@ -164,9 +174,41 @@ img.photocouple{
 	clear:both;
 }
 @media only screen and (max-width: 1306px) {
-	#menu a {
-		float: none;
-		width: auto;
+	body {
+		font-size: 13px;
 	}
-
+	#lieudereception {
+		float: none;
+		width: 0 auto;
+	}
+	#menu {
+		float: none;
+		margin: none;
+	}
 }
+@media only screen and (max-width: 320px) {
+	body {
+		font-size: 12px;
+	}
+	#datedumariage img {
+		visibility: hidden;
+		display: none;
+	}
+	#datedumariage h1, h2, h3 {
+		margin-top: 1.5em;
+	}
+	.subsection {
+		float: none;
+		margin: 0 auto;
+	}
+	#temoinsisabelle {
+		float: none;
+		margin: 0 auto;
+	}
+	#temoinsarnaud {
+		float: none;
+		margin: 0 auto;
+	}
+	
+}
+
