--- a/unit_8/css/main.css
+++ b/unit_8/css/main.css
@@ -1,10 +1,11 @@
 * { margin:0; padding:0; box-sizing:border-box; }
-
 body {
+	font-size:15px;
+}
+header {
 	background-image: url('../images/ciel.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
-	font-size: 15px;
 }
 #titre{
 	min-height: 100vh;
@@ -14,6 +15,13 @@ body {
 	position: fixed;
 	display: inline-block;
 	font-size: 0.9em;
+	top: 0;
+	left: 0;
+	right: 0;
+	background: #4b759d;
+	text-align: center;
+	border-bottom: 2px solid #EBDA95;
+	z-index: 1;
 }
 #menu a:hover {
 	color: #87ADF2;
@@ -22,9 +30,10 @@ body {
 	text-decoration: none;
 	color: #EBDA95;
 	font-size: 1.5em;
-	margin:1.7em;
-	padding: 0 2em;
+	/* margin:1.7em; */
+	padding: 1em;
 	float: left;
+	width: 20%;
 	}
 #titre h1 {
 	font-family: "Helvetica Neue",sans-serif;
@@ -43,21 +52,19 @@ img.photocouple{
 	height: 60vh;
 }
 #datedumariage {
-	padding: 5% 0 5%;
 	font-family: "Helvetica Neue",sans-serif;
 	color: #EBDA95;
-	text-align: center; 		
+	text-align: center;
 	min-height: 100vh;
-	padding-left: 5%;
-	padding-right: 5%;
-	padding-top: 9%;
+	padding: 4em 0;
+	width: 70%;
+	margin: auto;
 }
 #datedumariage img {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	width: 70%;
-	height: 40vh;
+	width: 100%;
 }
 #datedumariage h1 {
 	font-family: helvetica, sans-serif;
@@ -84,22 +91,29 @@ img.photocouple{
 	line-height:3em;
 }
 #lieudereception {
-	min-height: 100vh;
+	/* min-height: 100vh; */
 	font-family: helvetica, sans-serif;
 	font-size: 1em;
 	line-height: 2em;
 	color: #EBDA95;
+	width: 70em;
+	margin: auto;
+	position: relative;
 }
 #direction {
 	float: left;
 	width: 50%;
-	margin-left: 10%;
-	margin-top: 10%;
+	/* margin-left: 10%; */
+	/* margin-top: 10%; */
 	padding: 1%;
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
 }
 #lieudereception img{
-	margin-top: 10%;
- 	width: 30%;
+	/* margin-top: 10%; */
+	width: 50%;
+	float: right;
 }
 #lestemoins {
 	min-height: 100vh;
@@ -141,6 +155,7 @@ img.photocouple{
     padding: 3%;
     float: left;
     width: 49%;
+    border: 2px solid;
 }
 .temoinsarnaud1 {
 	padding: 3%;
