--- a/unit_8/css/main.css
+++ b/unit_8/css/main.css
@@ -3,7 +3,7 @@ body {
 	font-size:15px;
 }
 header {
-	background-image: url('../images/ciel.jpg');
+	background-image: url('../images/montblanc3.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
 }
@@ -48,7 +48,7 @@ img.photocouple{
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 5em;
-	border-radius: 50%;
+	border-radius: 70%;
 	height: 60vh;
 }
 #datedumariage {
@@ -76,8 +76,8 @@ img.photocouple{
 	line-height: 1.2em;
 }
 .subsection {
-	width: 32%;
-  	padding: .8%;
+	width: 50%;
+  	padding: 0.8%;
  	float: left;
 }
 #datedumariage p {
