--- a/unit_8/css/main.css
+++ b/unit_8/css/main.css
@@ -2,6 +2,7 @@
 body {
 	font-size:15px;
 }
+
 header {
 	background-image: url('../images/photo3.jpg');
 	background-size: cover;
@@ -20,7 +21,7 @@ header {
 	right: 0;
 	background: #4b759d;
 	text-align: center;
-	border-bottom: 2px solid #EBDA95;
+	border-bottom: 2px solid #FF8000;
 	z-index: 1;
 }
 #menu a:hover {
@@ -28,7 +29,7 @@ header {
 }
 #menu a {
 	text-decoration: none;
-	color: #EBDA95;
+	color: #FF8000;
 	font-size: 1.5em;
 	/* margin:1.7em; */
 	padding: 0.5em;
@@ -37,7 +38,7 @@ header {
 	}
 #titre h1 {
 	font-family: "Helvetica Neue",sans-serif;
-	color:#EBDA95;
+	color:#FF8000;
 	margin-top: 1.7em;
 	font-size: 4em;
 	font-style: normal;
@@ -50,7 +51,7 @@ img.facebook{
 }
 #datedumariage {
 	font-family: "Helvetica Neue",sans-serif;
-	color: #EBDA95;
+	color: #FF8000;
 	text-align: center;
 	min-height: 100vh;
 	padding: 4em 0;
@@ -96,7 +97,7 @@ img.facebook{
 	position: relative;
 }
 #lieudereception h2,h1 {
-	color: #EBDA95;
+	color: #FF8000;
 }
 #direction {
 	float: left;
@@ -129,7 +130,7 @@ img.facebook{
 }
 #lestemoins h1 {
 	font-family: "Helvetica Neue",sans-serif;
-	color:#EBDA95;
+	color:#FF8000;
 	font-size: 1.5em;
 	font-style: normal;
 	text-align: center;
@@ -137,7 +138,7 @@ img.facebook{
 }
 #lestemoins h2{
 	font-family: "Helvetica Neue",sans-serif;
-	color:#EBDA95;
+	color:#FF8000;
 	font-size: 1.2em;
 	font-style: normal;
 	text-align: center;
@@ -174,7 +175,7 @@ img.facebook{
 }
 #lescadeaux h1 {
 	font-family: "Helvetica Neue",sans-serif;
-	color:#EBDA95;
+	color:#FF8000;
 	font-size: 2em;
 	font-style: normal;
 	text-align: center;
