--- a/unit_8/css/main.css
+++ b/unit_8/css/main.css
@@ -7,6 +7,9 @@ header {
 	background-size: cover;
 	background-repeat: no-repeat;
 }
+#titre img {
+	display: none;
+}
 #titre{
 	min-height: 100vh;
     padding: 1%;
@@ -197,20 +200,29 @@ img.facebook{
 	#menu {
 		font-size: 0.9em;
 	}
+	#titre {	
+		background-image: none;
+	}
 }
 @media only screen and (max-width: 667px) {
 	body {
 		font-size: 12px;
 	}
+	#titre {	
+		background-image: none;
+	}
+	#titre img{
+	border-radius: 50%;
+	width: 70%;
+	display: block;
+	margin: 0 auto;
+	visibility: visible;
+}
 	#menu {
 		display: none;
 	}
 	#menu a {
 		width: 50%;
-	}
-	#datedumariage img {
-		visibility: hidden;
-		display: none;
 	}
 	.subsection {
 		float: none;
