--- a/unit_8/css/main.css
+++ b/unit_8/css/main.css
@@ -203,6 +203,13 @@ img.facebook{
 	#titre {	
 		background-image: none;
 	}
+	#titre img{
+	border-radius: 50%;
+	width: 70%;
+	display: block;
+	margin: 0 auto;
+	visibility: visible;
+	}
 }
 @media only screen and (max-width: 667px) {
 	body {
@@ -217,7 +224,7 @@ img.facebook{
 	display: block;
 	margin: 0 auto;
 	visibility: visible;
-}
+	}
 	#menu {
 		display: none;
 	}
